# llm-eval

./: AGENTS.md  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
alembic/: env.py
config/: models.yaml  settings.yaml
config/rubrics/: default.yaml
prompts/: judge_pairwise_coot.j2  judge_pointwise.j2
src/llm_eval/: __init__.py
src/llm_eval/cli/: __init__.py  _common.py  config.py  experiments.py  main.py  results.py  runs.py  tasks.py
src/llm_eval/config/: __init__.py  loader.py
src/llm_eval/db/: __init__.py  models.py  session.py
src/llm_eval/eval/: __init__.py  comparator.py  judge.py  ranking.py  runner.py
src/llm_eval/models/: __init__.py  provider.py
tests/: test_judge.py  test_ranking.py
